--- a/app/views/gantts/show.html.erb
+++ b/app/views/gantts/show.html.erb
@@ -308,11 +308,11 @@
 <table style="width:100%">
 <tr>
   <td align="left">
-    <%= link_to_content_update("\xc2\xab " + l(:label_previous),
+    <%= link_to("\xc2\xab " + l(:label_previous),
                                params.merge(@gantt.params_previous)) %>
   </td>
   <td align="right">
-    <%= link_to_content_update(l(:label_next) + " \xc2\xbb",
+    <%= link_to(l(:label_next) + " \xc2\xbb",
                                params.merge(@gantt.params_next)) %>
   </td>
 </tr>
